# octo

./: .gitignore  .gitmodules  Cargo.toml  README.md  frag.spv
bloom/: 0.frag  1.frag
bloomen/: 0.frag  1.frag  11.frag  2.frag  5.frag
errors/: Cargo.toml
errors/src/: lib.rs
examples/: bloom.octo  bloom.octo2  sobel.octo
just_renderer/: Cargo.toml
just_renderer/src/: bind_group_layouts.rs  camera.rs  dynamic_buffer.rs  id_set.rs  lib.rs  light.rs  material_library.rs  model_data.rs  model_instance.rs  renderer.rs  shader_manager.rs  texture.rs  uniforms.rs
just_renderer/src/passes/: gbuffer_fill.rs  gbuffer_lighting.rs  mod.rs
just_renderer/src/passes/generation/: Noise.wgsl  mod.rs  noise.rs
just_renderer/src/renderer/: blit.rs  builtin_assets.rs  configuration.rs  gbuffer.rs  octo_postprocess.rs  pipeline_state.rs  renderer_single_frame.rs  runtime_configuration.rs
just_renderer/src/uniforms/: material.rs  model.rs  util_data.rs
octo/: Cargo.toml  build.rs
octo/bloom/: 1.frag
octo/sobel/: 0.frag  1.frag
octo/src/: basic_fragment.glsl  basic_vertex.glsl  lib.rs  main.rs  prototypes.rs  shader_generation.rs  static_analysis.rs  tac_ir.rs
octo/src/experimental_ir/: mod.rs
octo/src/prototypes/: protos.rs  protos.yaml
octo/src/semantics/: mod.rs
octo/src/semantics/env/: mod.rs
octo/src/tac_ir/: code.rs  emit_builtins.rs  emit_ir_from_ast.rs  emit_spirv.rs  ir.rs  mod.rs  special_builtins.rs  split_passes.rs  utils.rs
octo/src/tac_ir/emit_spirv/: emit_std.rs  for_loop.rs  ids.rs  if_else.rs  main_emitter.rs  peekable_code.rs
octo/src/tac_ir/optimalizations/: constant_propagation_context.rs  constants_propagation.rs  mod.rs  move_sync.rs  remove_unused.rs  unroll_loop.rs
octo/src/tac_ir/utils/: for_loop.rs  if_else.rs  peekable_code.rs
octo/templates/: builtin_spirv.rs  emit_builtin.rs  protos.rs  shader.glsl
octo/test1/: 1.frag
octo_parser/: Cargo.toml
octo_parser/src/: ast.rs  grammar.lalrpop  grammar.rs  lexer.rs  lib.rs
octo_runtime/: Cargo.toml
octo_runtime/src/: data_loading.rs  functionality.rs  generated_stub.rs  lib.rs  types.rs  window.rs
octo_runtime/src/data/: quad.vert
octo_showcase/: Cargo.toml  build.rs
octo_showcase/src/: buffers.rs  file.octo  frag.glsl  images.rs  input.rs  main.rs  state.rs  vert.glsl  window.rs
octo_showcase/src/hal/: buffers.rs  framebuffer_stuff.rs  hardware.rs  images.rs  mod.rs  pipeline.rs  prelude.rs  renderframe_stuff.rs
octo_showcase/src/input/: keyboard_state.rs  mod.rs  mouse_state.rs
octo_showcase/src/state/: camera.rs  mod.rs
parser/: Cargo.toml
parser/src/: ast.rs  grammar.lalrpop  grammar.rs  lexer.rs  lib.rs
res/shaders/: gbuffer_fill.wgsl  gbuffer_format.util.wgsl  gbuffer_lighting.wgsl
showcase/: Cargo.toml  build.rs
showcase/src/: game.rs  lib.rs  main.rs  ui_state.rs
showcase/src/game/: camera_controller.rs  resources.rs  scene.rs
sobel/: 0.frag  1.frag
src/: grammar.lalrpop  grammar.rs  main.rs
src/semantics/: .mod.rs.swo  mod.rs
src/semantics/env/: mod.rs
test1/: 0.frag  1.frag  2.frag
testFiles/: bloom.octo  bloom.octo1  bloom.octo2  bloomen.octo  gen.bat  gen.sh  test1.octo  test1.octo1  test1.octo2  test1.spv  test2.octo  test_glsl spirv_disassembly.frag  test_glsl.frag
