[package]
name = "octo"
version = "0.1.0"
authors = ["Adam Winiarczuk <adamosca@gmail.com>"]
build = "build.rs" # LALRPOP preprocessing

[dependencies]
structopt = "0.2"
clap = { version = "2.20", default-features = false }
lalrpop-util = "0.15.2"
regex = "0.2.0"

# Add a build-time dependency on the lalrpop library:
[build-dependencies]
lalrpop = "0.15.2"