[package]
name = "just_renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = { version = "29", features = ["spirv"] }
image = { version = "0.24", default-features = true }
cfg-if = "1.0"
log = "0.4"
strum = { version = "0.26", features = ["derive"] }
glam = { version = "0.25", features = ["bytemuck"] }
bytemuck = { version = "1.12", features = ["derive"] }
tobj = "4.0"
encase = { version = "0.7", features = ["glam"] }
winit = "0.30"
octo_runtime = { path = "../octo_runtime" }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.3"
glob = "0.3"
