[package]
name = "octo_parser"
version = "0.0.1"
authors = ["Adam Winiarczuk <adam.winiarczuk@gmail.com>"]

license = "MIT"

description = "Parser for octo"

repository = "https://github.com/KnownVermicelli/octo"
documentation = "None"

build = "build.rs"

[dependencies]
regex = "0.2.0"
# collect-mac = "0.1.0"
# itertools = "0.7"
# quick-error = "1.0.0"
lalrpop-util = "0.16.3"
# log = "0.4"
# pretty = "0.5"
# ordered-float = "0.5.0" # gluon_base
# codespan = "0.1.1"
# codespan-reporting = "0.1.1"

[dev-dependencies]
# env_logger = "0.5"
# difference = "2"
# pretty_assertions = "0.5"

[build-dependencies]
lalrpop = "0.16.3"

