[package]
name = "octo_runtime"
version = "0.1.0"
authors = ["Adam Winiarczuk <adam.winiarczuk@gmail.com>"]

license = "MIT"

description = "Runtime for octo"

repository = "https://github.com/Tsuguri/octo"
documentation = "None"

[features]
default = ["vulkan"]
gl = ["gfx-backend-gl"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]

[dependencies]
gfx-hal = "0.1"
image = "0.18"
log = "0.4"
winit = "0.18"
glsl-to-spirv = "0.1.4"

[dependencies.gfx-backend-gl]
version = "0.1"
features = ["glutin"]
optional = true

[dependencies.gfx-backend-vulkan]
version = "0.1"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
version = "0.1"
optional = true
