[package]
name = "parser"
version = "0.0.1"
authors = ["Adam Winiarczuk <adam.winiarczuk@gmail.com>"]
edition = "2018"

license = "MIT"

description = "Parser for octo"

repository = "https://github.com/KnownVermicelli/octo"
documentation = "None"

build = "build.rs"

[dependencies]
errors = { path = "../errors", version = "0.0.1"}
# regex = "0.2.0"
# collect-mac = "0.1.0"
# itertools = "0.7"
# quick-error = "1.0.0"
lalrpop-util = "0.16.3"
# log = "0.4"
# pretty = "0.5"
# ordered-float = "0.5.0" # gluon_base
codespan = "0.3.0"
codespan-reporting = "0.3.0"

[dev-dependencies]
# env_logger = "0.5"
# difference = "2"
# pretty_assertions = "0.5"

[build-dependencies]
lalrpop = "0.16.3"

