[package]
name = "just_game"
version = "0.1.0"
edition = "2021"

[dependencies]
just_renderer = {path = "../just_renderer"}
log = "0.4"
strum = { version = "0.26", features = ["derive"] }
glam = { version = "0.25", features = ["bytemuck"] }
env_logger = "0.10"
pollster = "0.3"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.3"
glob = "0.3"
