[package]
name = "just_game"
version = "0.1.0"
edition = "2021"

[dependencies]
just_renderer = {path = "../just_renderer"}
log = "0.4"
strum = { version = "0.26", features = ["derive"] }
glam = { version = "0.25", features = ["bytemuck"] }
env_logger = "0.10"
pollster = "0.3"
egui = "0.34"
egui-wgpu = "0.34"
egui-winit = "0.34"
serde_json = "1.0"
rfd = "0.17"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.3"
glob = "0.3"
